# wgpu-tutorial

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  TUTORIAL_RECOMMENDATIONS.md  package-lock.json  package.json
.github/workflows/: deploy.yml
code/framework/: Cargo.toml
code/framework/src/: app.rs  camera.rs  example.rs  geometry.rs  gpu.rs  input.rs  lib.rs  texture.rs
code/guide/3d/camera/: Cargo.toml
code/guide/3d/depth-buffer/: Cargo.toml
code/guide/3d/instancing/: Cargo.toml
code/guide/3d/transformations/: Cargo.toml
code/guide/advanced/bloom/: Cargo.toml
code/guide/advanced/compute/: Cargo.toml
code/guide/advanced/hdr/: Cargo.toml
code/guide/advanced/model-loading/: Cargo.toml
code/guide/advanced/msaa/: Cargo.toml
code/guide/advanced/msaa/src/: main.rs  shader.wgsl
code/guide/advanced/multiple-meshes/: Cargo.toml
code/guide/advanced/multiple-meshes/src/: main.rs  shader.wgsl
code/guide/advanced/particles/: Cargo.toml
code/guide/advanced/particles/src/: main.rs  render.wgsl  simulate.wgsl
code/guide/advanced/render-to-texture/: Cargo.toml
code/guide/getting-started/creating-window/: Cargo.toml
code/guide/getting-started/hello-triangle/: Cargo.toml
code/guide/getting-started/init-wgpu/: Cargo.toml
code/guide/gpu-data-model/buffers/: Cargo.toml
code/guide/gpu-data-model/index-buffers/: Cargo.toml
code/guide/gpu-data-model/shaders/: Cargo.toml
code/guide/gpu-data-model/textures/: Cargo.toml
code/guide/gpu-data-model/uniform-bind-groups/: Cargo.toml
code/guide/gpu-data-model/vertex-buffers/: Cargo.toml
code/guide/lighting/basics/: Cargo.toml
code/guide/lighting/materials/: Cargo.toml
code/guide/lighting/normal-mapping/: Cargo.toml
code/guide/lighting/shadows/: Cargo.toml
docs/: about.md  index.md
docs/.vitepress/: config.mts
docs/.vitepress/theme/: index.ts
docs/appendix/glossary/: index.md
docs/appendix/why-wgpu/: index.md
docs/getting-started/: index.md
docs/getting-started/camera/: index.md
docs/getting-started/coordinate-system/: index.md
docs/getting-started/creating-window/: index.md
docs/getting-started/hello-triangle/: index.md
docs/getting-started/shaders/: index.md
docs/getting-started/textures/: index.md
docs/getting-started/transformations/: index.md
docs/getting-started/webgpu-and-wgpu/: index.md
docs/guide/: glossary.md
docs/guide/3d/camera/: index.md
docs/guide/3d/depth-buffer/: index.md
docs/guide/3d/instancing/: index.md
docs/guide/3d/transformations/: index.md
docs/guide/advanced/bloom/: index.md
docs/guide/advanced/compute/: index.md
docs/guide/advanced/hdr/: index.md
docs/guide/advanced/model-loading/: index.md
docs/guide/advanced/msaa/: index.md
docs/guide/advanced/multiple-meshes/: index.md
docs/guide/advanced/particles/: index.md
docs/guide/advanced/render-to-texture/: index.md
docs/guide/compute/: index.md
docs/guide/getting-started/: index.md
docs/guide/getting-started/camera/: index.md
docs/guide/getting-started/coordinate-system/: index.md
docs/guide/getting-started/creating-window/: index.md
docs/guide/glossary/: index.md
docs/guide/lighting/: index.md
docs/guide/math/: index.md
(+66 files in other folders)
