[workspace]
resolver = "2"

members = [
    "code/guide/getting-started/*"
]

[workspace.package]
version = "0.1.0"
authors = ["Bromles <bromles@yandex.ru>"]
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = 3

[workspace.dependencies]
#region deps
winit = "0.30"
tokio = { version = "1.47", features = ["parking_lot", "rt"] }
tracing = "0.1"
tracing-subscriber = "0.3"
wgpu = "27.0"
bytemuck = { version = "1.9", features = ["derive"] }
encase = "0.12"
glam = { version = "0.30", features = ["debug-glam-assert", "encase", "bytemuck"] }
image = "0.25"
#endregion deps
