[workspace]
resolver = "2"

members = [
    "code/framework",
    "code/guide/getting-started/*",
    "code/guide/gpu-data-model/*"
]

[workspace.package]
version = "0.1.0"
authors = ["Bromles <bromles@yandex.ru>"]
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = 3

[workspace.dependencies]
winit = "0.30"
tokio = { version = "1", features = ["parking_lot", "rt"] }
tracing = "0.1"
tracing-subscriber = "0.3"
wgpu = "29.0"
bytemuck = { version = "1.25", features = ["derive"] }
encase = "0.12"
glam = { version = "0.33", features = ["debug-glam-assert", "encase", "bytemuck"] }
pollster = "0.4"
image = "0.25"
