[package]
name = "multiple-meshes"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
framework = { path = "../../../framework" }
wgpu.workspace = true
winit.workspace = true
bytemuck.workspace = true
encase.workspace = true
glam.workspace = true
