[package]
name = "advanced-particles"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
framework = { path = "../../../framework" }
wgpu.workspace = true
winit.workspace = true
encase.workspace = true
glam.workspace = true
rand = "0.9"
